<resources>
    <string name="app_name">Callify</string>
    <string name="Hello_get">Hello, get</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="uploading_status">Uploading status...</string>
    <string name="there_is_active_call_currently">There is already an active call</string>
    <string name="error_calling">Error performing call</string>
    <string name="voice_call_confirmation">Are you sure want to make a voice call?</string>
    <string name="video_call_confirmation">are you sure you want to make a video call?</string>
    <string name="loading">Loading..</string>
    <string name="connecting">Connecting</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="incoming_voice_call">Incoming Voice Call</string>
    <string name="answer">ANSWER</string>
    <string name="decline">DECLINE</string>
    <string name="hangup">HANGUP</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="missed_call_notification">Missed call from:</string>
    <string name="playing_audio">Playing Audio</string>
    <string name="mark_as_read">mark as read</string>
    <string name="fireapp_video_call">%s Video Call</string>
    <string name="fireapp_voice_call">%s Voice Call</string>
    <string name="fireapp_conference_video_call">%s Group Video Call</string>
    <string name="fireapp_conference_voice_call">%s Group Voice Call</string>
    <string name="waiting_for_answer">Waiting for answer</string>
    <string name="failed">Failed</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="answered">Answered</string>
    <string name="initiating">Initiating</string>
    <string name="delete_status_confirmation">are you sure you want to delete this status?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="status_uploaded">Status uploaded Successfully</string>
    <string name="error_uploading_status">Error uploading status</string>
    <string name="invalid_image">Invalid Image</string>
    <string name="viewed_statuses">Viewed updates</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="video_length_is_too_long">Video length is too long</string>
    <string name="tap_to_add_status">Tap to add status update</string>
    <string name="your_status_will_disappear_note">Your status updates will disappear after 24 hours.</string>
    <string name="not_found">not found</string>
    <string name="clear_chat">Clear chat</string>
    <string name="clear_chat_message">are you sure you want to delete all messages in this chat?</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_calls_confirmation">Delete Selected Calls?</string>
    <string name="message_to_drag_up">Drag images up for gallery</string>
    <string name="pix_ok">OK</string>
    <string name="not_contact_selected">No Contact Selected</string>
    <string name="deleting">Deleting...</string>
    <string name="copied_to_clipboard">Copied To Clipboard...</string>
    <string name="could_not_get_this_file">could not get this file</string>
    <string name="send_to_toolbar_title">Send To ..</string>
    <string name="user_is_blocked">User is Blocked</string>
    <string name="this_user_has_old_version">This user has old version of this app</string>
    <string name="user_already_added_to_broadcast">user already added to broadcast</string>
    <string name="delete_broadcast_confirmation">Delete this broadcast?</string>
    <string name="user_already_added_to_group">user already added to group</string>
    <string name="so_you_can_easly">so we can easily chat  with each other !</string>
    <string name="hi_i_m_using_app">Hi there! i\'m using</string>
    <string name="unmute_notifications">UnMute Notifications</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="group_info">Group info</string>
    <string name="broadcast_list_info">Broadcast list info</string>
    <string name="Permissions_continue">Continue</string>
    <string name="Permissions_not_now">Not now</string>
    <string name="Permissions_permission_required">Permissions Required</string>
    <string name="date_format_today_hour" translatable="false">HH:mm</string>
    <string name="date_format" translatable="false">d MMMM yyyy</string>
    <string name="date_format_today">TODAY</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="sending_reply">Sending Reply</string>
    <string name="typing">Typing...</string>
    <string name="recording">Recording...</string>
    <string name="error_playing_this">Error playing this :(</string>
    <string name="delete_media_from_phone">Delete Media From Phone</string>
    <string name="delete_messages_confirmation">Delete Message?</string>
    <string name="delete_for_me">DELETE FOR ME</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_for_everyone">DELETE FOR EVERYONE</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="kaun_string">Callify</string>
    <string name="get_started_string">GET STARTED</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="native_advanced_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="smart__string">Smart,</string>
    <string name="spam_free_dialer_string">spam-free Dialer</string>
    <string name="and_sms_string">and SMS</string>
    <string name="truecaller__loved_by_250_million_users_string">Callify, Fastest growing caller ID</string>
    <string name="by_clicking__get_started__if_you_reside_in_the_eu__eea_or_switzerland_you_accept_the_terms_of_service_and_if_you_reside_in_any_other_country_you_accept_the_terms_of_service_and_privacy_policy_string">By clicking Get Started if you reside in the EU, EEA or Switzerland you acceptthe <u>Terms of Service</u> and if you reside in any other country you accept the <u>Terms of Service</u> and <u>Privacy Policy</u></string>
    <string name="change_language_to__string">Change language to </string>
    <string name="hindi"><u>हिन्दी</u></string>
    <string name="more_string"><u>More</u></string>
    <string name="get_started_ek1_string">GET STARTED</string>
    <string name="choose_language">Choose Language</string>
    <string name="use_system_default">Use System Default</string>
    <string name="change">Change</string>
    <string name="defaulttitle">Set Callify As the Default Dialling App?</string>
    <string name="defaultdetail">Changing the default dialer app may cause some call settings to become invalid, and may also affect the stability and compatibility of the phone. Using the dialer app provided by the system is recommended.</string>
    <string name="to_show_your">To show your call history and to filter spam SMS, callify needs acess to your calls, contacts and SMS.</string>
    <string name="security_note_kaun">(Security note: Callify does not source its data from contacts in your phonebook)</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="select_your_country_and_enter_your_phone_number">Select your country and enter your phone number</string>
    <string name="verification">Verification</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="who_viewed_my_profile">Who viewed my profile</string>
    <string name="manage_blocking">Manage Blocking</string>
    <string name="discovery_new_friends">Discovery new friends</string>
    <string name="invite_friends">invite Friends</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="faq">FAQ</string>
    <string name="navigation_drawer_open">    Open navigation drawer</string>
    <string name="navigation_drawer_close">    Close navigation drawer</string>
    <string name="change_default_sms_app">    Change default SMS app</string>
    <string name="mark_all_as_read">    Mark all as read</string>
    <string name="arcived_conversations">    Archived conversations</string>
    <string name="new_message_" formatted="false">New message</string>
    <string name="new_message" formatted="false">1 unread message.</string>
    <string name="new_messages_" formatted="false">New messages</string>
    <string name="new_messages" formatted="false">%d unread messages.</string>
    <string name="call" formatted="false">Call</string>
    <string name="reply" formatted="false">Reply</string>
    <string name="me" formatted="false">Me</string>
    <string name="view_contact_" formatted="false">View contact</string>
    <string name="add_contact_" formatted="false">Add to contacts</string>
    <string name="view_thread_" formatted="false">View thread</string>
    <string name="filter_spam_" formatted="false">Mark as Spam</string>
    <string name="dont_filter_spam_" formatted="false">Remove from Blacklist</string>
    <string name="delete_message_" formatted="false">Delete message</string>
    <string name="delete_thread_" formatted="false">Delete thread</string>
    <string name="forward_" formatted="false">Forward</string>
    <string name="send_draft_" formatted="false">Send draft</string>
    <string name="copy_text_" formatted="false">Copy message text</string>
    <string name="view_details_" formatted="false">View message details</string>
    <string name="delete_threads_" formatted="false">Delete all threads</string>
    <string name="mark_all_read_" formatted="false">Mark all as read</string>
    <string name="mark_read_" formatted="false">Mark read</string>
    <string name="mark_unread_" formatted="false">Mark unread</string>
    <string name="message_options_" formatted="false">Message options</string>
    <string name="delete_message_question" formatted="false">Do you really want to delete this message?</string>
    <string name="delete_thread_question" formatted="false">Do you really want to delete <b>all messages of this thread</b>?</string>
    <string name="delete_threads_question" formatted="false">Do you really want to delete <b>all messages</b>?</string>
    <string name="from_" formatted="false">From:</string>
    <string name="to_" formatted="false">To:</string>
    <string name="type_" formatted="false">Type:</string>
    <string name="sent_" formatted="false">Sent:</string>
    <string name="received_" formatted="false">Received:</string>
    <string name="view_mms" formatted="false">View MMS</string>
    <string name="mms_conversation" formatted="false">&lt;MMS body&gt;</string>
    <string name="import_contact_" formatted="false">Import contact</string>
    <string name="download_" formatted="false">Download</string>
    <string name="downloading_" formatted="false">Downloading..</string>
    <string name="error_conv_null" formatted="false">Error getting conversation from DB!</string>
    <string name="error_sending_failed" formatted="false">Sending failed</string>
    <string name="text_hint" formatted="false">Send message</string>
    <string name="paste_" formatted="false">[Paste from clipboard]</string>
    <string name="restore_" formatted="false">Restore last message</string>
    <string name="attachment_saved" formatted="false">Saved attachment on SD card as:</string>
    <string name="almostDone">Almost Done</string>
    <string name="allowpermissions">Set up live caller id by enabling "draw over other apps" in your system settings.</string>
    <string name="notifications">Notifications</string>
</resources>