<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bgnewbtg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/manicons" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/lockicon" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/almostDone"
            android:textColor="#908F9D" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/allowpermissions"
            android:textColor="#908F9D" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/usesystembtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/drawableback"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/continuebtn"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>