<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Phone.PhoneActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.5">
        <ImageView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:src="@drawable/phonenewicon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_phone_number"
                android:textSize="20dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textthree"
                android:textStyle="bold"
                android:fontFamily="@font/montserratbold"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_country_and_enter_your_phone_number"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@color/textthree"
            android:textStyle="bold"
            android:fontFamily="@font/montserratbold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="0.3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.55">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/locationicon"/>
                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/phoneedition"/>
                <RelativeLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/etmobile"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:layout_marginLeft="15dp"
                        android:backgroundTint="#3B8AFD"
                        android:maxEms="10"
                        android:textColorHint="#888888"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:hint="9999999999"/>
                    <ImageView
                        android:id="@+id/greencheckiv"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_alignRight="@+id/etmobile"
                        android:src="@drawable/greencheck"/>
                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llcontinue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#3FBA13"
            android:layout_weight="0.25">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvcontinue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/continuebtn"
                android:background="#3FBA13"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16dp"
                android:fontFamily="@font/montserratbold"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>